[package]
name = "jadep"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Java dependency graph generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dashmap = "5.5.3"
rayon = "1.8.1"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
